--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Run linting (flake8)
         run: |
           flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 src/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          flake8 src/ --count --max-complexity=10 --max-line-length=127 --statistics
 
       - name: Run type checking (mypy)
         continue-on-error: true
